# gongfu-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  PHASE3-ROADMAP.md  README.md  install.ps1  install.sh  pyproject.toml
.claude/workflows/: engine-logic-audit.js
.codegraph/: daemon.pid
.hermes/plans/: gongfu-advisor-plugin.md
accumulation_settle/: README.md
accumulation_settle/experience_crystallization/: 100-theme-summaries-index.md  102-theme-summary-united-front-alliance-and-identifying-real-allies.md  104-theme-summary-independent-position-boundary-governance-and-base-area-building.md  105-theme-summary-protracted-war-stage-rhythm-and-long-term-positioning.md  107-theme-summary-backbone-building-organizing-core-and-talent-absorption.md  109-theme-summary-source-mapping.md  110-third-volume-final-victory-window-stage-summary.md  README.md  excr002-theme-summaries-index.md  excr003-theme-summary-situation-judgment-main-contradiction-and-stage-analysis.md  excr004-theme-summary-united-front-alliance-and-identifying-real-allies.md  excr005-theme-summary-mass-entry-main-force-and-main-battlefield-organization.md  (+8 more)
agents/: AGENTS.md  install.sh  mcp-claude-code.json  mcp-codex.toml
api_server/: __init__.py  server.py
claude-skills/: CLAUDE.md
docs/: engine-logic-audit.md
engine/: __init__.py  plugin.yaml  router.py  schemas.py  tools.py
mcp_server/: __init__.py  server.py
methodology/: README.md
scripts/: build_packs.py
skills/: 00-skill设计规范.md  README.md
strategy/: README.md  STRATEGY-ROADMAP.md
supportive_materials/: README.md
(+1806 files in other folders)
