[project]
name = "gongfu-skill"
version = "1.1.0"
description = "共富参谋——劳动者的随身参谋。跨平台 MCP server + Hermes 插件。"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
gongfu-mcp = "mcp_server.server:main"
gongfu-api = "api_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "api_server"]
